syntax = "proto3";
package errcode;

import "hopeio/errcode/enum.proto";
import "hopeio/utils/patch/go.proto";

option java_package = "xyz.hoper.protobuf.errcode";
option go_package = "github.com/hopeio/protobuf/errcode";



message ErrRep {
    ErrCode code = 1 [(go.field) = {tags:'json:"code"'}];
    string message = 2;
}