/*
 * Copyright 2024 hopeio. All rights reserved.
 * Licensed under the MIT License that can be found in the LICENSE file.
 * @Created by jyb
 */

syntax = "proto3";
package test;
import "hopeio/utils/enum/enum.proto";
import "hopeio/utils/patch/go.proto";

option java_package = "xyz.hoper.protobuf.test";
option go_package = "github.com/hopeio/protobuf/test";
option (go.file) = {no_enum_prefix:true};

enum ErrCode {
  option (enum.jsonmarshal) = false;

  Success = 0 [(enum.text) = "成功",(go.value).name = "Success"];
  Canceled = 1 [(enum.text) = "操作取消",(go.value).name = "Canceled"];
  Unknown = 2 [(enum.text) = "未知错误",(go.value).name = "Unknown"];
  InvalidArgument = 3 [(enum.text) = "无效的参数",(go.value).name = "InvalidArgument"];
  DeadlineExceeded = 4 [(enum.text) = "响应超时",(go.value).name = "DeadlineExceeded"];
  NotFound = 5 [(enum.text) = "未发现",(go.value).name = "NotFound"];
  AlreadyExists = 6 [(enum.text) = "已经存在",(go.value).name = "AlreadyExists"];
  PermissionDenied = 7 [(enum.text) = "操作无权限",(go.value).name = "PermissionDenied"];
  ResourceExhausted = 8 [(enum.text) = "资源不足",(go.value).name = "ResourceExhausted"];
  FailedPrecondition = 9 [(enum.text) = "操作被拒绝",(go.value).name = "FailedPrecondition"];
  Aborted = 10 [(enum.text) = "操作终止",(go.value).name = "Aborted"];
  OutOfRange = 11 [(enum.text) = "超出范围",(go.value).name = "OutOfRange"];
  Unimplemented = 12 [(enum.text) = "未实现",(go.value).name = "Unimplemented"];
  Internal = 13 [(enum.text) = "内部错误",(go.value).name = "Internal"];
  Unavailable = 14 [(enum.text) = "服务不可用",(go.value).name = "Unavailable"];
  DataLoss = 15 [(enum.text) = "数据丢失",(go.value).name = "DataLoss"];
  Unauthenticated = 16 [(enum.text) = "身份未验证",(go.value).name = "Unauthenticated"];

  TimesTooMuch = 30004 [(enum.text) = "尝试次数过多",(go.value).name = "TimesTooMuch"];
  ParamInvalid = 30005 [(enum.text) = "参数错误",(go.value).name = "ParamInvalid"];
  ParamInvalid1 = 300051 [(enum.text) = "参数错误",(go.value).name = "ParamInvalid1"];
  ParamInvalid2 = 300052 [(enum.text) = "参数错误",(go.value).name = "ParamInvalid2"];
  ParamInvalid3 = 300053 [(enum.text) = "参数错误",(go.value).name = "ParamInvalid3"];
  ParamInvalid4 = 300054 [(enum.text) = "参数错误",(go.value).name = "ParamInvalid4"];
  ParamInvalid5 = 300055 [(enum.text) = "参数错误",(go.value).name = "ParamInvalid5"];
  ParamInvalid6 = 300056 [(enum.text) = "参数错误",(go.value).name = "ParamInvalid6"];
  ParamInvalid7 = 300057 [(enum.text) = "参数错误",(go.value).name = "ParamInvalid7"];
  ParamInvalid8 = 300058 [(enum.text) = "参数错误",(go.value).name = "ParamInvalid8"];
  ParamInvalid9 = 300059 [(enum.text) = "参数错误",(go.value).name = "ParamInvalid9"];
  ParamInvalid10 = 3000510 [(enum.text) = "参数错误",(go.value).name = "ParamInvalid10"];
  ParamInvalid11 = 3000511 [(enum.text) = "参数错误",(go.value).name = "ParamInvalid11"];
  ParamInvalid12 = 3000512 [(enum.text) = "参数错误",(go.value).name = "ParamInvalid12"];
  ParamInvalid13 = 3000513 [(enum.text) = "参数错误",(go.value).name = "ParamInvalid13"];
  ParamInvalid14 = 3000514 [(enum.text) = "参数错误",(go.value).name = "ParamInvalid14"];
  ParamInvalid15 = 3000515 [(enum.text) = "参数错误",(go.value).name = "ParamInvalid15"];
  ParamInvalid16 = 3000516 [(enum.text) = "参数错误",(go.value).name = "ParamInvalid16"];
  ParamInvalid17 = 3000517 [(enum.text) = "参数错误",(go.value).name = "ParamInvalid17"];
  ParamInvalid18 = 3000518 [(enum.text) = "参数错误",(go.value).name = "ParamInvalid18"];
  ParamInvalid19 = 3000519 [(enum.text) = "参数错误",(go.value).name = "ParamInvalid19"];
  ParamInvalid20 = 3000520 [(enum.text) = "参数错误",(go.value).name = "ParamInvalid20"];
  ParamInvalid21 = 3000521 [(enum.text) = "参数错误",(go.value).name = "ParamInvalid21"];
  ParamInvalid22 = 3000522 [(enum.text) = "参数错误",(go.value).name = "ParamInvalid22"];
  ParamInvalid23 = 3000523 [(enum.text) = "参数错误",(go.value).name = "ParamInvalid23"];
  ParamInvalid24 = 3000524 [(enum.text) = "参数错误",(go.value).name = "ParamInvalid24"];
  ParamInvalid25 = 3000525 [(enum.text) = "参数错误",(go.value).name = "ParamInvalid25"];
  ParamInvalid26 = 3000526 [(enum.text) = "参数错误",(go.value).name = "ParamInvalid26"];
  ParamInvalid27 = 3000527 [(enum.text) = "参数错误",(go.value).name = "ParamInvalid27"];
  ParamInvalid28 = 3000528 [(enum.text) = "参数错误",(go.value).name = "ParamInvalid28"];
  ParamInvalid29 = 3000529 [(enum.text) = "参数错误",(go.value).name = "ParamInvalid29"];
  ParamInvalid30 = 3000530 [(enum.text) = "参数错误",(go.value).name = "ParamInvalid30"];
  ParamInvalid31 = 3000531 [(enum.text) = "参数错误",(go.value).name = "ParamInvalid31"];
  ParamInvalid32 = 3000532 [(enum.text) = "参数错误",(go.value).name = "ParamInvalid32"];
  ParamInvalid33 = 3000533 [(enum.text) = "参数错误",(go.value).name = "ParamInvalid33"];
  ParamInvalid34 = 3000534 [(enum.text) = "参数错误",(go.value).name = "ParamInvalid34"];
  ParamInvalid35 = 3000535 [(enum.text) = "参数错误",(go.value).name = "ParamInvalid35"];
  ParamInvalid36 = 3000536 [(enum.text) = "参数错误",(go.value).name = "ParamInvalid36"];
  ParamInvalid37 = 3000537 [(enum.text) = "参数错误",(go.value).name = "ParamInvalid37"];
  ParamInvalid38 = 3000538 [(enum.text) = "参数错误",(go.value).name = "ParamInvalid38"];
  ParamInvalid39 = 3000539 [(enum.text) = "参数错误",(go.value).name = "ParamInvalid39"];
  ParamInvalid40 = 3000540 [(enum.text) = "参数错误",(go.value).name = "ParamInvalid40"];

}